--- a/front/package.json
+++ b/front/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint **/*"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/vuetify": "0.5.5",
+    "dragula": "^3.7.3",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
