--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,17 @@ sw.*
 
 # Mac OSX
 .DS_Store
+
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+db.sqlite3
+db.sqlite3-journal
+media
+my_settings
+0001_initial.py
+
+### venv ###
+myvenv
