--- a/front/package.json
+++ b/front/package.json
@@ -12,8 +12,14 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/vuetify": "0.5.5",
+    "cookie-universal-nuxt": "^2.1.4",
     "dragula": "^3.7.3",
-    "nuxt": "^2.0.0"
+    "luxon": "^1.25.0",
+    "nuxt": "^2.0.0",
+    "vue-cookies": "^1.7.4",
+    "vue-datetime": "^1.0.0-beta.14",
+    "vuex-persistedstate": "^4.0.0-beta.1",
+    "weekstart": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
